# RBE_595_Grasping_from_Top_Surfaces_Project

./: README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/denoise/share/ament_index/resource_index/package_run_dependencies/: denoise
ros2_ws/install/denoise/share/denoise/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/denoise/share/denoise/cmake/: denoiseConfig.cmake
ros2_ws/install/pcl/share/pcl/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/pcl/share/pcl/cmake/: pclConfig.cmake
ros2_ws/install/vbm_project_env/share/vbm_project_env/: local_setup.sh  package.sh
ros2_ws/log/: latest_build
ros2_ws/src/clustering/: CMakeLists.txt  package.xml
ros2_ws/src/clustering/src/: clustering.cpp
ros2_ws/src/clustering_itf/: CMakeLists.txt  package.xml
ros2_ws/src/clustering_itf/msg/: StringArray.msg
ros2_ws/src/denoise/: CMakeLists.txt  package.xml
ros2_ws/src/denoise/src/: denoise_pointcloud.cpp
ros2_ws/src/grasp_quality/: package.xml  setup.cfg  setup.py
ros2_ws/src/grasp_quality/grasp_quality/: evaluate_grasp_points_wip.py  grasp_quality.py
ros2_ws/src/major_plane_detection/: CMakeLists.txt  package.xml
ros2_ws/src/major_plane_detection/src/: plane_detection.cpp
ros2_ws/src/planar_grasp/: package.xml  setup.cfg  setup.py
ros2_ws/src/planar_grasp/planar_grasp/: planar_grasp.py  planar_grasp_multiple_objects.py  planar_grasp_pcl.py
ros2_ws/src/planar_surface/: CMakeLists.txt  package.xml
ros2_ws/src/planar_surface/src/: find_normals.py  planar_surface.cpp  planar_surface_multiple_objects.cpp  planar_surface_multiple_objects_automated.cpp  planar_surface_pcl.cpp  test1.py  test2.py  test2_1.py  test3.py
ros2_ws/src/vbm_project_env/: CMakeLists.txt
ros2_ws/src/vbm_project_env/launch/: planar_grasp.launch.py  rviz.launch.py  simulation.launch.py  simulation_alphashape.launch.py  simulation_multiple_objects.launch.py  simulation_multiple_objects_banana.launch.py  simulation_pcl.launch.py
ros2_ws/src/vbm_project_env/rviz/: simulation.rviz  simulation_multiple_objects.rviz
ros2_ws/src/vbm_project_env/worlds/: multiple_objects.world  simulation_multiple_objects.world  simulation_multiple_objects_banana.world
